--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "dependencies": {
         "@expo-google-fonts/jost": "^0.2.0",
         "@react-native-async-storage/async-storage": "^1.13.0",
+        "@react-native-community/datetimepicker": "3.2.0",
         "@react-native-community/masked-view": "0.1.10",
+        "@react-native-picker/picker": "^1.16.6",
         "@react-navigation/native": "^6.0.2",
         "@react-navigation/stack": "^5.14.4",
+        "date-fns": "^2.23.0",
         "expo": "~41.0.1",
         "expo-app-loading": "^1.1.2",
         "expo-blur": "~9.0.3",
