cadastro de notificações; caneelamento de notificações

--- a/app.json
+++ b/app.json
@@ -27,6 +27,16 @@
         },
         "web": {
             "favicon": "./assets/favicon.png"
-        }
+        },
+        "plugins": [
+            [
+                "expo-notifications",
+                {
+                    "icon": "./assets/iconNotification.png",
+                    "color": "#ffffff",
+                    "mode": "production"
+                }
+            ]
+        ]
     }
 }
