--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
         "expo-app-loading": "^1.1.2",
         "expo-blur": "~9.0.3",
         "expo-font": "~9.1.0",
-        "expo-notifications": "~0.11.6",
+        "expo-notifications": "0.11.6",
         "expo-status-bar": "~1.0.4",
+        "expo-updates": "~0.5.4",
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
